# project-euler-rust

./: Cargo.toml
src/: main.rs  problem_122.rs
src/problem_122/: compute.rs
